--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -1,1 +1,72 @@
-<p>table-info works!</p>
+  <main class="container">
+    <h3>下載專區</h3>
+    <section>
+      <div class="row mb-2">
+        <div class="col">
+          <label>公告類別</label>
+          <div>
+            <input type="text">
+          </div>
+        </div>
+        <div class="col">
+          <label>公告單位</label>
+          <div>
+            <input type="text">
+          </div>
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col">
+          <label>發佈日期</label>
+          <div>
+            <input type="text">
+          </div>
+        </div>
+        <div class="col">
+          <label>關鍵字查詢</label>
+          <div>
+            <input type="text">
+          </div>
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col">
+          <button class="float-right">查詢</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">First</th>
+              <th scope="col">Last</th>
+              <th scope="col">Handle</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </main>
