adjust button style

--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -39,7 +39,7 @@
     <div>
       <table class="table table-bordered">
         <thead>
-          <tr class="table-info">
+          <tr class="table-primary">
             <th scope="col">發佈日期</th>
             <th scope="col">公告類別</th>
             <th scope="col">公告名稱</th>
