--- a/src/app/download-application/download-application.component.html
+++ b/src/app/download-application/download-application.component.html
@@ -138,8 +138,11 @@
     </section>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" (click)="modalRef.hide()">
-      Close
+    <button type="button" class="btn btn-primary ml-auto" (click)="modalRef.hide()">
+      申請
+    </button>
+    <button type="button" class="btn btn-secondary mr-auto" (click)="modalRef.hide()">
+      取消
     </button>
   </div>
 </ng-template>
