--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -3,42 +3,54 @@
   <section class="my-2">
     <div class="row mb-2">
       <div class="col form-inline">
-        <label class="ml-auto">公告類別</label>
+        <label class="">公告類別</label>
         <div class="pl-2">
-          <input type="text" />
+          <select class="form-control" id="exampleFormControlSelect2">
+            <option>請選擇</option>
+            <option>一般公告</option>
+            <option>單位公告</option>
+            <option>主管位公告</option>
+          </select>
         </div>
       </div>
       <div class="col form-inline">
-        <label class="ml-auto">公告單位</label>
+        <label class="">公告單位</label>
         <div class="pl-2">
-          <input type="text" />
+          <select class="form-control" id="exampleFormControlSelect2">
+            <option>請選擇</option>
+          </select>
         </div>
       </div>
     </div>
     <div class="row mb-2">
       <div class="col form-inline">
-        <label class="ml-auto">發佈日期</label>
+        <label class="">發佈日期</label>
         <div class="pl-2 form-inline">
-          <div class="col-xs-12 col-12 col-md-4 form-group">
-            <input type="text"
-                   placeholder="Datepicker"
-                   class="form-control w-100"
-                   bsDatepicker
-                   [bsConfig]="{ adaptivePosition: true }">
+          <div class="">
+            <input
+              type="text"
+              placeholder="Datepicker"
+              class="form-control w-100"
+              bsDatepicker
+              [bsConfig]="{ adaptivePosition: true }"
+            />
           </div>
-          <div class="col-xs-12 col-12 col-md-4 form-group">
-            <input type="text"
-                   placeholder="Datepicker"
-                   class="form-control w-100"
-                   bsDatepicker
-                   [bsConfig]="{ adaptivePosition: true }">
+          <span> ~ </span>
+          <div class="">
+            <input
+              type="text"
+              placeholder="Datepicker"
+              class="form-control w-100"
+              bsDatepicker
+              [bsConfig]="{ adaptivePosition: true }"
+            />
           </div>
         </div>
       </div>
       <div class="col form-inline">
-        <label class="ml-auto">關鍵字查詢</label>
+        <label class="">關鍵字查詢</label>
         <div class="pl-2">
-          <input type="text" />
+          <input type="text" class="form-control" />
         </div>
       </div>
     </div>
