--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -122,84 +122,90 @@
     </button>
   </div>
   <div class="modal-body container">
-    <section class="my-2 p-2 table-primary">
+    <section class="my-2 p-2">
       <div class="row mb-2">
         <div class="col form-inline">
-          <label>公告類別</label>
+          <label class="table-primary">公告類別</label>
           <div class="pl-2 ml-auto">
             <span>一般公告</span>
           </div>
         </div>
         <div class="col form-inline">
-          <label>公告單位</label>
+          <label class="table-primary">公告單位</label>
           <div class="pl-2 ml-auto">
             <span>營運管理處</span>
           </div>
         </div>
       </div>
+      <hr class="mt-1 mb-1"/>
       <div class="row mb-2">
         <div class="col form-inline">
-          <label>發佈日期</label>
+          <label class="table-primary">發佈日期</label>
           <div class="pl-2 ml-auto">
             <span>2020/12/31</span>
           </div>
         </div>
         <div class="col form-inline">
-          <label>發佈者</label>
+          <label class="table-primary">發佈者</label>
           <div class="pl-2 ml-auto">
             <span>大朋友(child)</span>
           </div>
         </div>
       </div>
+      <hr class="mt-1 mb-1"/>
       <div class="row mb-2">
         <div class="col form-inline">
-          <label>上架日期</label>
+          <label class="table-primary">上架日期</label>
           <div class="pl-2 ml-auto">
             <span>2021/3/5</span>
           </div>
         </div>
         <div class="col form-inline">
-          <label>下架日期</label>
+          <label class="table-primary">下架日期</label>
           <div class="pl-2 ml-auto">
             <span></span>
           </div>
         </div>
       </div>
+      <hr class="mt-1 mb-1"/>
       <div class="row mb-2">
         <div class="col form-inline">
-          <label>下載審核</label>
+          <label class="table-primary">下載審核</label>
           <div class="pl-2 ml-auto">
             <input type="checkbox" name="" id="" disabled checked />
           </div>
         </div>
         <div class="col form-inline">
-          <label>下載審核者</label>
+          <label class="table-primary">下載審核者</label>
           <div class="pl-2 ml-auto">
             <span>公告單位主管</span>
           </div>
         </div>
       </div>
+      <hr class="mt-1 mb-1"/>
       <div class="row mb-2">
         <div class="col form-inline">
-          <label>浮水印</label>
+          <label class="table-primary">浮水印</label>
           <div class="pl-2 ml-auto">
             <input type="checkbox" name="" id="" disabled checked />
           </div>
         </div>
         <div class="col form-inline"></div>
       </div>
+      <hr class="mt-1 mb-1"/>
       <div class="row mb-2">
         <div class="col form-inline">
-          <label>公告名稱</label>
+          <label class="table-primary">公告名稱</label>
           <div class="pl-2 ml-auto">
             <span>稽核公告</span>
           </div>
         </div>
         <div class="col form-inline"></div>
       </div>
+      <hr class="mt-1 mb-1"/>
       <div class="row mb-2">
         <div class="col form-inline">
-          <label>檔案名稱</label>
+          <label class="table-primary">檔案名稱</label>
           <div class="pl-2 ml-auto">
             <span>稽核表</span>
           </div>
@@ -224,6 +230,7 @@
         </div>
         <div class="col form-inline"></div>
       </div>
+      <hr class="mt-1 mb-1"/>
     </section>
     <section class="my-2 p-2">
       <div class="row mb-2">
