--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -237,7 +237,7 @@
         <div class="col form-inline">
           <label>申請人</label>
           <div class="pl-2 offset-md-1">
-            <input type="text" />
+            <input type="text" class="form-control" />
           </div>
         </div>
       </div>
@@ -245,7 +245,7 @@
         <div class="col form-inline">
           <label>申請原因</label>
           <div class="pl-2 offset-md-1">
-            <textarea name="" id="" cols="50" rows="3"></textarea>
+            <textarea name="" id="" class="form-control" cols="50" rows="3"></textarea>
           </div>
         </div>
       </div>
