--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -29,7 +29,7 @@
           <div class="">
             <input
               type="text"
-              placeholder="Datepicker"
+              placeholder="起日"
               class="form-control w-100"
               bsDatepicker
               [bsConfig]="{ adaptivePosition: true }"
@@ -39,7 +39,7 @@
           <div class="">
             <input
               type="text"
-              placeholder="Datepicker"
+              placeholder="訖日"
               class="form-control w-100"
               bsDatepicker
               [bsConfig]="{ adaptivePosition: true }"
