add router to routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-table-info></app-table-info>
+<nav>
+  <a routerLink="/download">download</a>
+  <a routerLink="/approval">approval</a>
+</nav>
+<router-outlet></router-outlet>
