--- a/src/app/download-application/download-application.component.html
+++ b/src/app/download-application/download-application.component.html
@@ -1,6 +1,6 @@
-<button type="button" class="btn btn-primary" (click)="openModal(template)">
+<!-- <button type="button" class="btn btn-primary" (click)="openModal(template)">
   下載申請
-</button>
+</button> -->
 
 <ng-template #template>
   <div class="modal-header">
