--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -3,13 +3,26 @@
   <section class="my-2">
     <div class="row mb-2">
       <div class="col form-inline">
+        <label class="">審核類別</label>
+        <div class="pl-2">
+          <select class="form-control" id="exampleFormControlSelect2">
+            <option>請選擇</option>
+            <option>發佈審核</option>
+            <option>下載審核</option>
+          </select>
+        </div>
+      </div>
+      <div class="col form-inline"></div>
+    </div>
+    <div class="row mb-2">
+      <div class="col form-inline">
         <label class="">公告類別</label>
         <div class="pl-2">
           <select class="form-control" id="exampleFormControlSelect2">
             <option>請選擇</option>
             <option>一般公告</option>
             <option>單位公告</option>
-            <option>主管位公告</option>
+            <option>主管公告</option>
           </select>
         </div>
       </div>
