--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -73,23 +73,28 @@
       </div>
     </div>
   </section>
-  <section class="my-2">
+  <section class="my-2 tableSection">
     <div>
       <table class="table table-bordered">
         <thead>
           <tr class="table-primary">
-            <th scope="col">發佈日期</th>
-            <th scope="col">公告類別</th>
-            <th scope="col">公告名稱</th>
-            <th scope="col">附件名稱</th>
-            <th scope="col">檔案下載</th>
-            <th scope="col">檔案大小</th>
-            <th scope="col">更新日期</th>
+            <th scope="col"><input type="checkbox" name="" id="" /></th>
+            <th scope="col"><span>審核類型</span></th>
+            <th scope="col"><span>公告類別</span><span>公告名稱</span></th>
+            <th scope="col"><span>附件名稱</span></th>
+            <th scope="col"><span>檢視單位</span><span>檢視人員</span></th>
+            <th scope="col"><span>發佈日期</span><span>發佈者</span></th>
+            <th scope="col"><span>上架日期</span><span>下架日期</span></th>
+            <th scope="col"><span>下載審核</span><span>審核者</span></th>
+            <th scope="col"><span>浮水印</span></th>
+            <th scope="col"><span>廢止</span></th>
+            <th scope="col"><span>下載申請者</span><span>下載原因</span></th>
+            <th scope="col"><span>操作</span></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row">2021/3/4</th>
+            <th scope="row"><input type="checkbox" name="" id="" /></th>
             <td>一般公告</td>
             <td>公司LOGO</td>
             <td>
@@ -100,7 +105,7 @@
             <td>2021/3/3</td>
           </tr>
           <tr>
-            <th scope="row">2021/3/4</th>
+            <th scope="row"><input type="checkbox" name="" id="" /></th>
             <td>單位公告</td>
             <td>稽核單</td>
             <td>
