--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -95,29 +95,39 @@
         <tbody>
           <tr>
             <th scope="row"><input type="checkbox" name="" id="" /></th>
-            <td>一般公告</td>
-            <td>公司LOGO</td>
-            <td>
-              <div>LOGO 使用說明 範例</div>
-            </td>
-            <td>檔案</td>
-            <td>1.5MB</td>
+            <td>發佈審核</td>
+            <td>一般公告、公司LOGO</td>
+            <td>LOGO、使用說明、範例</td>
+            <td>全員工</td>
+            <td>2021/3/2 小朋友(Kid)</td>
             <td>2021/3/3</td>
-          </tr>
-          <tr>
-            <th scope="row"><input type="checkbox" name="" id="" /></th>
-            <td>單位公告</td>
-            <td>稽核單</td>
-            <td>
-              <div>稽核單 使用說明</div>
-            </td>
+            <td></td>
+            <td>V</td>
+            <td>V</td>
+            <td></td>
             <td>
               <button class="btn btn-secondary" (click)="openModal(template)">
                 申請
               </button>
             </td>
-            <td>-</td>
+          </tr>
+          <tr>
+            <th scope="row"><input type="checkbox" name="" id="" /></th>
+            <td>下鮺審核</td>
+            <td>單位公告、稽核單</td>
+            <td>稽核單、使用說明</td>
+            <td><a href="">中文名字</a></td>
+            <td>2021/3/3 大朋友(Kid)</td>
             <td>2021/3/20</td>
+            <td>大朋友(Kid)</td>
+            <td></td>
+            <td></td>
+            <td>小朋友(Kid) 評估使用</td>
+            <td>
+              <button class="btn btn-secondary" (click)="openModal(template)">
+                申請
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
