--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -1,5 +1,5 @@
 <main class="container">
-  <h3>下載專區</h3>
+  <h3>下載專區審核</h3>
   <section class="my-2">
     <div class="row mb-2">
       <div class="col form-inline">
