--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -168,6 +168,21 @@
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
+          <label class="table-primary">檢視單位</label>
+          <div class="pl-2 ml-auto">
+            <span>全員工</span>
+          </div>
+        </div>
+        <div class="col form-inline">
+          <label class="table-primary">檢視人員</label>
+          <div class="pl-2 ml-auto">
+            <span></span>
+          </div>
+        </div>
+      </div>
+      <hr class="mt-1 mb-1" />
+      <div class="row mb-2">
+        <div class="col form-inline">
           <label class="table-primary">發佈日期</label>
           <div class="pl-2 ml-auto">
             <span>2020/12/31</span>
@@ -233,12 +248,12 @@
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">檔案名稱</label>
+          <label class="table-primary">附件名稱</label>
           <div class="pl-2 ml-auto">
             <span>稽核表</span>
           </div>
         </div>
-        <div class="col form-inline"></div>
+        <div class="col form-inline">Excel、PDF、Word</div>
       </div>
       <div class="row mb-2">
         <div class="col form-inline">
