--- a/src/app/download-approval/download-approval.component.scss
+++ b/src/app/download-approval/download-approval.component.scss
@@ -3,6 +3,8 @@
     thead {
       th {
         vertical-align: middle;
+        padding: 0.4em;
+
         span {
           display: block;
         }
@@ -11,6 +13,7 @@
     tbody {
       td {
         word-break: keep-all;
+        padding: 0.4em;
       }
     }
   }
