--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -60,7 +60,7 @@
       </div>
     </div>
   </section>
-  <section class="my-2">
+  <section class="my-2 tableSection">
     <div>
       <table class="table table-bordered">
         <thead>
@@ -137,7 +137,7 @@
           </div>
         </div>
       </div>
-      <hr class="mt-1 mb-1"/>
+      <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">發佈日期</label>
@@ -152,7 +152,7 @@
           </div>
         </div>
       </div>
-      <hr class="mt-1 mb-1"/>
+      <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">上架日期</label>
@@ -167,7 +167,7 @@
           </div>
         </div>
       </div>
-      <hr class="mt-1 mb-1"/>
+      <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">下載審核</label>
@@ -182,7 +182,7 @@
           </div>
         </div>
       </div>
-      <hr class="mt-1 mb-1"/>
+      <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">浮水印</label>
@@ -192,7 +192,7 @@
         </div>
         <div class="col form-inline"></div>
       </div>
-      <hr class="mt-1 mb-1"/>
+      <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">公告名稱</label>
@@ -202,7 +202,7 @@
         </div>
         <div class="col form-inline"></div>
       </div>
-      <hr class="mt-1 mb-1"/>
+      <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">檔案名稱</label>
@@ -230,7 +230,7 @@
         </div>
         <div class="col form-inline"></div>
       </div>
-      <hr class="mt-1 mb-1"/>
+      <hr class="mt-1 mb-1" />
     </section>
     <section class="my-2 p-2">
       <div class="row mb-2">
@@ -245,7 +245,13 @@
         <div class="col form-inline">
           <label>申請原因</label>
           <div class="pl-2 offset-md-1">
-            <textarea name="" id="" class="form-control" cols="50" rows="3"></textarea>
+            <textarea
+              name=""
+              id=""
+              class="form-control"
+              cols="50"
+              rows="3"
+            ></textarea>
           </div>
         </div>
       </div>
