--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -153,14 +153,14 @@
     <section class="my-2 p-2">
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">公告類別</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">公告類別</label>
+          <div class="pl-2 ml-auto mr-5">
             <span>一般公告</span>
           </div>
         </div>
         <div class="col form-inline">
-          <label class="table-primary">公告單位</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">公告單位</label>
+          <div class="pl-2 ml-auto mr-5">
             <span>營運管理處</span>
           </div>
         </div>
@@ -168,14 +168,14 @@
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">檢視單位</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">檢視單位</label>
+          <div class="pl-2 ml-auto mr-5">
             <span>全員工</span>
           </div>
         </div>
         <div class="col form-inline">
-          <label class="table-primary">檢視人員</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">檢視人員</label>
+          <div class="pl-2 ml-auto mr-5">
             <span></span>
           </div>
         </div>
@@ -183,14 +183,14 @@
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">發佈日期</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">發佈日期</label>
+          <div class="pl-2 ml-auto mr-5">
             <span>2020/12/31</span>
           </div>
         </div>
         <div class="col form-inline">
-          <label class="table-primary">發佈者</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">發佈者</label>
+          <div class="pl-2 ml-auto mr-5">
             <span>大朋友(child)</span>
           </div>
         </div>
@@ -198,14 +198,14 @@
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">上架日期</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">上架日期</label>
+          <div class="pl-2 ml-auto mr-5">
             <span>2021/3/5</span>
           </div>
         </div>
         <div class="col form-inline">
-          <label class="table-primary">下架日期</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">下架日期</label>
+          <div class="pl-2 ml-auto mr-5">
             <span></span>
           </div>
         </div>
@@ -213,23 +213,23 @@
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">下載審核</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">下載審核</label>
+          <div class="pl-2 ml-auto mr-5">
             <input type="checkbox" name="" id="" disabled checked />
           </div>
         </div>
         <div class="col form-inline">
-          <label class="table-primary">下載審核者</label>
-          <div class="pl-2 ml-auto">
-            <span>公告單位主管</span>
+          <label class="table-primary p-2">下載審核者</label>
+          <div class="pl-2 ml-auto mr-5">
+            <span>公告單位主管(admin)</span>
           </div>
         </div>
       </div>
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">浮水印</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">浮水印</label>
+          <div class="pl-2 ml-auto mr-5">
             <input type="checkbox" name="" id="" disabled checked />
           </div>
         </div>
@@ -238,8 +238,8 @@
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">公告名稱</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">公告名稱</label>
+          <div class="pl-2 ml-auto mr-5">
             <span>稽核公告</span>
           </div>
         </div>
@@ -248,8 +248,8 @@
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">附件名稱</label>
-          <div class="pl-2 ml-auto">
+          <label class="table-primary p-2">附件名稱</label>
+          <div class="pl-2 ml-auto mr-5">
             <span>稽核表</span>
           </div>
         </div>
@@ -258,7 +258,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>使用說明</span>
           </div>
         </div>
@@ -267,8 +267,28 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>範例</span>
+          </div>
+        </div>
+        <div class="col form-inline"></div>
+      </div>
+      <hr class="mt-1 mb-1" />
+      <div class="row mb-2">
+        <div class="col form-inline">
+          <label class="table-primary p-2">下載申請者</label>
+          <div class="pl-2 ml-auto mr-5">
+            <span>大朋友(Kid)</span>
+          </div>
+        </div>
+        <div class="col form-inline"></div>
+      </div>
+      <hr class="mt-1 mb-1" />
+      <div class="row mb-2">
+        <div class="col form-inline">
+          <label class="table-primary p-2">下載原因</label>
+          <div class="pl-2 ml-auto mr-5">
+            <span>需要使用</span>
           </div>
         </div>
         <div class="col form-inline"></div>
@@ -278,15 +298,7 @@
     <section class="my-2 p-2">
       <div class="row mb-2">
         <div class="col form-inline">
-          <label>申請人</label>
-          <div class="pl-2 offset-md-1">
-            <input type="text" class="form-control" />
-          </div>
-        </div>
-      </div>
-      <div class="row mb-2">
-        <div class="col form-inline">
-          <label>申請原因</label>
+          <label>備註</label>
           <div class="pl-2 offset-md-1">
             <textarea
               name=""
@@ -294,10 +306,12 @@
               class="form-control"
               cols="50"
               rows="3"
+              placeholder="請輸入(退件)原因"
             ></textarea>
           </div>
         </div>
       </div>
+      <div class="row mb-2"></div>
     </section>
   </div>
   <div class="modal-footer">
