--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -126,13 +126,13 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">公告類別</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>一般公告</span>
           </div>
         </div>
         <div class="col form-inline">
           <label class="table-primary">公告單位</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>營運管理處</span>
           </div>
         </div>
@@ -141,13 +141,13 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">發佈日期</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>2020/12/31</span>
           </div>
         </div>
         <div class="col form-inline">
           <label class="table-primary">發佈者</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>大朋友(child)</span>
           </div>
         </div>
@@ -156,13 +156,13 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">上架日期</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>2021/3/5</span>
           </div>
         </div>
         <div class="col form-inline">
           <label class="table-primary">下架日期</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span></span>
           </div>
         </div>
@@ -171,14 +171,14 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">下載審核</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <input type="checkbox" name="" id="" disabled checked />
           </div>
         </div>
         <div class="col form-inline">
           <label class="table-primary">下載審核者</label>
-          <div class="pl-2 ml-auto">
-            <span>公告單位主管</span>
+          <div class="pl-2 ml-auto mr-5">
+            <span>公告單位主管(admin)</span>
           </div>
         </div>
       </div>
@@ -186,7 +186,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">浮水印</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <input type="checkbox" name="" id="" disabled checked />
           </div>
         </div>
@@ -196,7 +196,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">公告名稱</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>稽核公告</span>
           </div>
         </div>
@@ -206,7 +206,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary">檔案名稱</label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>稽核表</span>
           </div>
         </div>
@@ -215,7 +215,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>使用說明</span>
           </div>
         </div>
@@ -224,7 +224,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="pl-2 ml-auto">
+          <div class="pl-2 ml-auto mr-5">
             <span>範例</span>
           </div>
         </div>
